--- a/Ecommerce/client/src/index.css
+++ b/Ecommerce/client/src/index.css
@@ -15,6 +15,7 @@ font-family: 'Saira', sans-serif; */
 .navbar{
   font-family: 'Poppins', sans-serif;
   font-size:26px ;
+ 
   line-height: 26px;
   text-transform: uppercase;
   box-shadow: 0 8px 6px -6px gray;
@@ -23,14 +24,19 @@ font-family: 'Saira', sans-serif; */
 }
 .nav-link{
   font-weight: 300 !important;
+  
+}
+.nav-item{
+  color: white;
 }
 .active{
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(9, 9, 9);
 }
 .navbar-brand {
   font-weight: 700;
   font-family: 'roboto',sans-serif;
   letter-spacing: 3px;
+  
 }
 
 /* =========footer========== */
@@ -163,15 +169,14 @@ color: rgb(0, 0, 0) !important;
   /* Other background styles */
 }
 
-.logo2{
-  width: 250px;
-  height: 40px;
-  margin-left: -6px;
-  border-radius: 10px;
+.aand{
+  font-weight: bolder;
+  
 }
-.logo3{
-  width: 50px;
-  height: 45px;
-  margin-left: 6px;
-  border-radius: 10px;
+.dong{
+  margin-top: 180px;
 }
+.ding{
+  margin-top: 100px;
+}
+
